fixed mobile header overlap

--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -20,7 +20,6 @@
   font-weight: 500;
 }
 
-
 .dept-title {
   text-align: center;
 }
@@ -100,10 +99,17 @@ body {
   background-repeat: repeat;
   width: 100%;
   background-size: contain, cover;
+  z-index: 1;
 }
 
 header {
   height: 50px;
+}
+
+@media screen and (max-width: 940px) {
+  header {
+    height: 175px;
+  }
 }
 
 footer {
